kube/services/hello/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      serviceAccountName: hello
      containers:
      - name: hello
        # image: ashlineldridge/hello:0.0.1
        image: k3d-local-registry:5555/hello:0.0.1
        imagePullPolicy: Always
