kube/services/hello/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
    service: hello
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: hello
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-external
spec:
  hosts:
  - api.borgorg.com
  gateways:
  - istio-ingress/external-gateway
  http:
  - match:
    - uri:
        prefix: /hello/
    rewrite:
      uri: /
    route:
    - destination:
        host: hello
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-internal
spec:
  hosts:
  - api.internal.borgorg.com
  gateways:
  - istio-ingress/internal-gateway
  http:
  - match:
    - uri:
        prefix: /hello/
    rewrite:
      uri: /
    route:
    - destination:
        host: hello
